--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.9.1"
