--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "webpack配置",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --progress",
-    "watch": "webpack --progress --watch",
-    "start": "webpack-dev-server --progress"
+    "build": "webpack --progress --config webpack.prod.js",
+    "start": "webpack-dev-server --config webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +29,7 @@
     "uglifyjs-webpack-plugin": "^1.1.2",
     "url-loader": "^0.6.2",
     "webpack": "^3.9.1",
-    "webpack-dev-server": "^2.9.5"
+    "webpack-dev-server": "^2.9.5",
+    "webpack-merge": "^4.1.1"
   }
 }
